--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "singlenet"
 version = "0.1.0"
 requires-python = ">=3.11"
 dependencies = [
-    "cell2image@git+https://github.com/lhillma/Cell2Image#egg=3de1b7a",
+    "cell2image@git+https://github.com/lhillma/Cell2Image#egg=d06fe0a95c9b0d503904e130dbc4dfb85531cb93",
     "lightning~=2.2.1",
     "monai~=1.3.0",
     "numpy~=1.26.4",
