--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,12 +3,15 @@ name = "singlenet"
 version = "0.1.0"
 requires-python = ">=3.11"
 dependencies = [
-    "cell2image@git+https://github.com/lhillma/Cell2Image#egg=6d29d796232a878eeb6b5c6501c37997847b4ed4",
+    "cell2image@git+https://github.com/lhillma/Cell2Image@f3f8388",
+    "click~=8.1.7",
     "lightning~=2.2.1",
     "monai~=1.3.0",
     "numpy~=1.26.4",
     "seaborn~=0.13.2",
+    "scikit-learn~=1.4.1",
     "torch~=2.2.1",
+    "tqdm~=4.66.2"
 ]
 
 [project.optional-dependencies]
@@ -21,6 +24,9 @@ dev = [
 [build-system]
 requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools.packages.find]
+include = ["singlenet"]
 
 [tool.black]
 line-length = 99
